--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.8.4",
     "chart.js": "^4.4.8",
     "class-variance-authority": "^0.7.1",
+    "dayjs": "^1.11.13",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
