--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
     "@tanstack/react-query": "^5.72.1",
     "@tanstack/react-query-devtools": "^5.72.1",
     "axios": "^1.8.4",
-    "chart.js": "^4.4.8",
+    "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "dayjs": "^1.11.13",
+    "motion": "^12.7.4",
     "next": "15.2.4",
     "react": "^19.0.0",
     "react-chartjs-2": "^5.3.0",
