--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.9",
     "class-variance-authority": "^0.7.1",
     "dayjs": "^1.11.13",
+    "framer-motion": "^11.0.0",
     "motion": "^12.7.4",
     "next": "15.2.4",
     "react": "^19.0.0",
